load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "foo_go_proto",
    importpath = "foo/proto",
    proto = ":foo_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":foo_go_proto"],
    importpath = "foo/proto",
    visibility = ["//visibility:public"],
)
