load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkg",
    srcs = ["sum.go"],
    importpath = "lib/pkg",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pkg_test",
    srcs = ["sum_test.go"],
    embed = [":pkg"],
    deps = ["@com_github_stretchr_testify//require"],
)
