load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pb_proto",
    srcs = ["money.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "pb_go_proto",
    importpath = "lib/proto",
    proto = ":pb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":pb_go_proto"],
    importpath = "lib/proto",
    visibility = ["//visibility:public"],
)
